--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,11 @@
             </div>
           </li>
           <li>
+            <div style="width: 100%; margin-bottom: 0.8em;">
+              <label class="btn btn-secondary" style="width: 100%;" onclick="import_theme()"><i class="bi bi-folder-fill"></i> Импорт темы <input type="file" id="importtheme" webkitfile style="display: none;"></label>
+            </div>
+          </li>
+          <li>
             <p><b>Версия RoundPlayer: </b></p><p>Prototype 0.0.2</p>
           </li>
           <li style="display: block;">
